--- a/mole.html
+++ b/mole.html
@@ -5,6 +5,17 @@
     <script type="text/javascript" src="mole.js"></script>
   </head>
   <body>
+    <div class="block">
+      <div class="mole_game">
+        <img src="mole-hill.png" alt="Mole Hill" class="dirt_pile">
+        <img src="mole-head.png" alt="Mole Head" class="mole_head">
+      </div>
+
+      <div class="mole_game">
+        <img src="mole-hill.png" alt="Mole Hill" class="dirt_pile">
+        <img src="mole-head.png" alt="Mole Head" class="mole_head">
+      </div>
+    </div>
 
     <!-- UNCOMMENT THE CODE BELOW WHEN DIRECTED -->
     <!-- <div class="sb">
@@ -12,7 +23,7 @@
       <div class="sb__game-over sb__game-over--hidden">Game Over</div>
       <div class="sb__mole-counter">Moles <span class="sb__moles">30</span></div>
     </div> -->
-    
+
     <!-- Your code here -->
   </body>
 </html>
